--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -19,7 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "tailwind:css" : "cross-env NODE_ENV=production npx tailwindcss -i ./src/css/tailwind.css -o ./src/css/index.css --watch"
+    "tailwind:css": "cross-env NODE_ENV=production npx tailwindcss -i ./src/css/tailwind.css -o ./src/css/index.css --watch"
   },
   "eslintConfig": {
     "extends": [
